--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = {extras = ["standard"], version = "^0.115.2"}
 pydantic-settings = "^2.6.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 alembic = "^1.13.3"
+asyncpg = "^0.30.0"
 
 
 [tool.poetry.group.dev.dependencies]
