--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.6.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 alembic = "^1.13.3"
 asyncpg = "^0.30.0"
+slowapi = "^0.1.9"
 
 
 [tool.poetry.group.dev.dependencies]
