--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 alembic = "^1.13.3"
 asyncpg = "^0.30.0"
 slowapi = "^0.1.9"
+redis = "^5.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
