--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,16 @@
-[tool.poetry]
+[project]
 name = "projects-search"
 version = "0.1.0"
-description = ""
-authors = ["nikrenxd <nikrenc1101@gmail.com>"]
+description = "Add your description here"
 readme = "README.md"
-package-mode = false
-
-
-[tool.poetry.dependencies]
-python = "^3.11"
-fastapi = {extras = ["standard"], version = "^0.115.2"}
-pydantic-settings = "^2.6.0"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
-alembic = "^1.13.3"
-asyncpg = "^0.30.0"
-slowapi = "^0.1.9"
-redis = "^5.2.0"
-
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.7.0"
-httpx = "^0.27.2"
-asgi-lifespan = "==2.*"
-pytest = "^8.3.3"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.11"
+dependencies = [
+    "asgi-lifespan>=2.1.0",
+    "asyncpg>=0.30.0",
+    "fastapi[standard]>=0.115.5",
+    "pydantic-settings>=2.6.1",
+    "pytest>=8.3.3",
+    "redis>=5.2.0",
+    "slowapi>=0.1.9",
+    "sqlalchemy[asyncio]>=2.0.36",
+]
